--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,10 +36,13 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about"><span class="glyphicon glyphicon-copy" aria-hidden="true"></span> About</a></li>
+            <li><a href="#contact"><span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> Contact</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              	<span class="glyphicon glyphicon-alert" aria-hidden="true"></span> 
+              	Dropdown <span class="caret"></span>
+          	  </a>
               <ul class="dropdown-menu">
                 <li><a href="#">StarAction</a></li>
                 <li><a href="#">Another action</a></li>
