--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New User</h1>
+<div class="container">
 
-<%= render 'form' %>
+	<h1>New User</h1>
 
-<%= link_to 'Back', users_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Back', users_path %>
+
+</div>
