--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,13 @@
 						<span class="glyphicon glyphicon-user" aria-hidden="true"></span> Contact
 						<% end %>
 					</li>
+					<li>
+						<%=link_to products_path do%>
+						<span class="glyphicon glyphicon-tag" aria-hidden="true"></span> Product
+						<% end %>
+					</li>
+
+
 
 <!--
             <li class="dropdown">
