--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,12 @@
 						<span class="glyphicon glyphicon-tag" aria-hidden="true"></span> Product
 						<% end %>
 					</li>
+					<li>
+						<%=link_to cart_path do%>
+						<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Cart
+						<% end %>
+					</li>
+
 
 
 
