changed contact to useres

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 					</li>
 					<li>
 						<%=link_to users_path do%>
-						<span class="glyphicon glyphicon-user" aria-hidden="true"></span> Contact
+						<span class="glyphicon glyphicon-user" aria-hidden="true"></span> Users
 						<% end %>
 					</li>
 					<li>
