--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,29 +31,29 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Demo</a>
+				<a class="navbar-brand" href="/">デモ</a>
 
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li>
 						<%=link_to root_path do%>
-						<span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
+						<span class="glyphicon glyphicon-home" aria-hidden="true"></span> ホーム
 						<% end %>
 					</li>
 					<li>
 						<%=link_to users_path do%>
-						<span class="glyphicon glyphicon-user" aria-hidden="true"></span> Users
+						<span class="glyphicon glyphicon-user" aria-hidden="true"></span> ユーザ
 						<% end %>
 					</li>
 					<li>
 						<%=link_to products_path do%>
-						<span class="glyphicon glyphicon-tag" aria-hidden="true"></span> Product
+						<span class="glyphicon glyphicon-tag" aria-hidden="true"></span> 製品
 						<% end %>
 					</li>
 					<li>
 						<%=link_to cart_path do%>
-						<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Cart
+						<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> カート
 						<% end %>
 					</li>
 
@@ -79,7 +79,7 @@
         -->
         <li>
         	<%=link_to logout_path do%>
-        	<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout
+        	<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> ログアウト
         	<% end %>
         </li>
     </ul>
