--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron" style="background-image: url(http://media.bizj.us/view/img/2621091/salesforce-tower*1200xx2036-1145-232-0.jpg); background-size:cover;">
+<div class="jumbotron" style="background-image: url(<%=image_url('bg.jpg')%>); background-size:cover;">
 
 	<div class="container">
 <!--
