--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,6 +14,9 @@
 					</div>
 					<div class="col-sm-8">
 						<%=product['description']%>
+						<div class="text-right" style="padding-top:10px;">
+							<button class="btn btn-success">カートへ追加</button>
+						</div>
 					</div>
 				</div>
 				
