added more to the menue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,23 @@
 						<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> カート
 						<% end %>
 					</li>
+					<li>
+						<%=link_to userid_path do%>
+						<span class="glyphicon glyphicon-qrcode" aria-hidden="true"></span> モバイル会員証
+						<% end %>
+					</li>
+					<li>
+						<%=link_to userid_path do%>
+						<span class="glyphicon glyphicon-gift" aria-hidden="true"></span> クーポン
+						<% end %>
+					</li>
+					<li>
+						<%=link_to userid_path do%>
+						<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 近くの店舗
+						<% end %>
+					</li>
+
+
 
 
 
