--- a/app/views/pages/userid.html.erb
+++ b/app/views/pages/userid.html.erb
@@ -1,8 +1,9 @@
 <div class="container"> 
 <div class="text-center">
 	<h4>店員にこのQRコードをご提示ください</h4>
-	<img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=<%=@user.id%>&choe=UTF-8" style="width:100%;"/>
-	<p >
+	<img src="https://chart.googleapis.com/chart?chs=500x500&cht=qr&chl=<%=@user.id%>&choe=UTF-8" style="width:100%;"/>
+	<p>
+		<%= image_tag 'dummy_person.jpg', class:"img-circle img-thumbnail", size:"100x100" %><br/>
 		お名前:<%=session['user_name']%> 様<br/>
 		会員番号:<%=@user.id%>
 	</p>
