changed map app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
 						<% end %>
 					</li>
 					<li>
-						<%=link_to userid_path do%>
+						<%=link_to stores_path do%>
 						<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 近くの店舗
 						<% end %>
 					</li>
