modified map app

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -12,13 +12,27 @@
 
     <script type="text/javascript">
 
-    	var map;
-    	function initMap() {
-    		map = new google.maps.Map(document.getElementById('map'), {
-    			center: {lat: -34.397, lng: 150.644},
-    			zoom: 8
+
+    	$(function(){
+		    if (navigator.geolocation) {
+		        navigator.geolocation.getCurrentPosition(showPosition);
+		    } else { 
+		        x.innerHTML = "Geolocation is not supported by this browser.";
+		    }
+    	})
+
+		function showPosition(position) {
+		    //x.innerHTML = "Latitude: " + position.coords.latitude + 
+		    //"<br>Longitude: " + position.coords.longitude; 
+		    map = new google.maps.Map(document.getElementById('map'), {
+    			center: {lat: position.coords.latitude, lng: position.coords.longitude},
+    			zoom: 15
     		});
-    	}
+		}
+
+
+    	var map;
+
 
     </script>
     <script async defer
