adjusted so it works with proper salesforce org

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
 						<img src="<%=product['image_url__c']%>" style="height:200px;"/>
 					</div>
 					<div class="col-sm-8">
-						<%=product['description']%>
+						<%=product['description__c']%>
 						<div class="text-right" style="padding-top:10px;">
 							<button class="btn btn-success">カートへ追加</button>
 						</div>
