--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -7,7 +7,7 @@
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<div class="text-center">
-					<img src="<%=a['image_url__c']%>" style="height:200px;"/>
+					<img src="<%=a['image_url__c']%>" style="width:100%;"/>
 				</div>
 			</div>
 		</div>
