--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,20 @@
 
 
 	<%= csrf_meta_tags %>
+
+	<style>
+		.navbar-brand {
+			background: url(<%= getImageByCode("03") == false ? image_url('logo.png') : getImageByCode("03") %>) no-repeat left center;
+			background-size: contain;
+			height: 50px;
+			width: 250px;
+		}
+
+
+	</style>
+
+
+
 </head>
 <body>
 
@@ -31,7 +45,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">デモ</a>
+				<a class="navbar-brand" href="/"></a>
 
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
