--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,7 +15,7 @@
 		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 -->
 		<div class="text-center">
-			<h2>Hello, <%=session[:user_name]%></h2>
+			<h2 style="text-shadow: 1px 1px 3px #fff;">Hello, <%=session[:user_name]%></h2>
 			<%= image_tag 'dummy_person.jpg', class:"img-circle img-thumbnail", size:"100x100" %>
 		</div>
 	</div>
