store show page

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,3 +1,31 @@
+<style>
+	#store_image{
+		height:300px; 
+		background-image: url(<%=@store['image_url__c']%>);
+		background-size:contain;
+		background-position: center top;
+		background-repeat:no-repeat;
+	}
+</style>
+
 <div class="container">
 	<h3><%=@store['name']%></h3>
+	<div id="store_image">
+	</div>
+	<address>
+	  <strong>住所</strong><br>
+	  <a href="geo:<%=@store['location__latitude__s']%>,<%=@store['location__longitude__s']%>" target="_blank"><%=@store['address__c']%></a>
+	</address>
+
+	<address>
+	  <strong>電話番号</strong><br>
+	  <a href="tel:<%=@store['phone__c']%>"><%=@store['phone__c']%></a>
+	</address>
+
+	<address>
+	  <strong>営業時間</strong><br>
+	  <%=@store['operating_hour__c']%>
+	</address>
+
+
 </div>
