--- a/app/views/pages/userid.html.erb
+++ b/app/views/pages/userid.html.erb
@@ -5,7 +5,7 @@
 	<p>
 		<%= image_tag 'dummy_person.jpg', class:"img-circle img-thumbnail", size:"100x100" %><br/>
 		<strong>お名前:</strong><%=session['user_name']%> 様<br/>
-		<strong>会員番号:</strong><%=session['user_id']%><br/>
+		<strong>会員番号:</strong><%=session['user_no']%><br/>
 		<strong>ご利用可能ポイント:</strong><%=@user['hd_point__c']%>
 	</p>
 
