--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-	<h3>製品カタログ</h3>
+	<h3><%= t('product_catalog') %></h3>
 
 
 	<% @res.each do |product| %>
@@ -15,11 +15,11 @@
 					<div class="col-sm-8">
 						<%=product['description__c']%>
 						<div class="text-right" style="padding-top:10px;">
-							<%=link_to "カートへ追加",  addtocart_path( product['id'] ), class:"btn btn-success"   %>
+							<%=link_to t('add_to_cart'),  addtocart_path( product['id'] ), class:"btn btn-success"   %>
 						</div>
 					</div>
 				</div>
-				
+
 			</div>
 		</div>
 
