--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,29 +1,24 @@
-    <style type="text/css">
-    	html, body { height: 100%; margin: 0; padding: 0; }
-    	#map { height: 100%; }
-    </style>
+<style type="text/css">
+  html, body { height: 100%; margin: 0; padding: 0; }
+  #map { height: 100%; }
+</style>
+<div class="container">
+  <h3><%= t('show_nearby_shops') %></h3>
+</div>
+<div id="map"></div>
 
-
-    <div class="container">
-     <h3>近い店舗を表示</h3>
- </div>
- <div id="map"></div>
-
-
- <script type="text/javascript">
-
-
+<script type="text/javascript">
     $(function(){
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(showPosition);
-        } else { 
+        } else {
             x.innerHTML = "Geolocation is not supported by this browser.";
         }
     })
 
     function showPosition(position) {
-        //x.innerHTML = "Latitude: " + position.coords.latitude + 
-        //"<br>Longitude: " + position.coords.longitude; 
+        //x.innerHTML = "Latitude: " + position.coords.latitude +
+        //"<br>Longitude: " + position.coords.longitude;
         map = new google.maps.Map(document.getElementById('map'), {
             center: {lat: position.coords.latitude, lng: position.coords.longitude},
             zoom: 15
@@ -34,12 +29,8 @@
         }
     }
 
-
-
     var markersArray = [];
-
     var map;
-
     var listAccounts = [
     <% @res.each do |store| %>
     {
@@ -48,10 +39,8 @@
         lat: <%=store['location__latitude__s']%>,
         lng: <%=store['location__longitude__s']%>
     },
-    <% end %> 
+    <% end %>
     ];
-
-
 
     function createMarkers(placeObj){
         var markerloc = new google.maps.LatLng(placeObj.lat, placeObj.lng);
@@ -65,15 +54,13 @@
 
         var content = "<div style='width:200px;'><a href='/store/"+placeObj.id+"'>"+ placeObj.Name +"</a></div>";
         infowindow = new google.maps.InfoWindow();
-        google.maps.event.addListener(marker,'click', (function(marker,content,infowindow){ 
+        google.maps.event.addListener(marker,'click', (function(marker,content,infowindow){
             return function() {
                 infowindow.setContent(content);
                 infowindow.open(map,marker);
             };
         })(marker,content,infowindow));
     }
-
-
 
     </script>
     <script async defer
