--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,6 +1,6 @@
 <style>
 	#store_image{
-		height:300px; 
+		height:300px;
 		background-size:contain;
 		background-position: center top;
 		background-repeat:no-repeat;
@@ -12,19 +12,15 @@
 	<div id="store_image" style="background-image:url(<%=@store['image_url__c']%>)">
 	</div>
 	<address>
-	  <strong>住所</strong><br>
+	  <strong><%= t('address') %></strong><br>
 	  <a href="geo:<%=@store['location__latitude__s']%>,<%=@store['location__longitude__s']%>" target="_blank"><%=@store['address__c']%></a>
 	</address>
-
-	<address>
-	  <strong>電話番号</strong><br>
+	<div>
+	  <strong><%= t('phone') %></strong><br>
 	  <a href="tel:<%=@store['phone__c']%>"><%=@store['phone__c']%></a>
-	</address>
-
-	<address>
-	  <strong>営業時間</strong><br>
+	</div>
+	<div>
+	  <strong><%= t('operating_hours') %></strong><br>
 	  <%=@store['operating_hour__c']%>
-	</address>
-
-
+	</div>
 </div>
