--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing User</h1>
-
+<h1><%= t('user_edit') %></h1>
 <%= render 'form' %>
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to t('show'), @user %> |
+<%= link_to t('back'), users_path %>
