--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container">
-  <h1>Listing Users</h1>
+  <h1><%= t('user_list') %></h1>
 
   <table class="table">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Birthday</th>
-        <th>Password</th>
+        <th><%= t('name') %></th>
+        <th><%= t('mail') %></th>
+        <th><%= t('birthdate') %></th>
+        <th><%= t('password') %></th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -21,17 +21,14 @@
           <td><%= user.email %></td>
           <td><%= user.birthday %></td>
           <td><%= user.password %></td>
-          <td><%= link_to 'Show', user %></td>
-          <td><%= link_to 'Edit', edit_user_path(user) %></td>
-          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to t('show'), user %></td>
+          <td><%= link_to t('edit'), edit_user_path(user) %></td>
+          <td><%= link_to t('delete'), user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </tbody>
   </table>
 
   <br>
-  <%= link_to 'New User', new_user_path %>
+  <%= link_to t('user_new'), new_user_path %>
 </div>
-
-
-
