--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,5 @@
 <div class="container">
-
-	<h1>New User</h1>
-
+	<h1><%= t('user_new') %></h1>
 	<%= render 'form' %>
-
-	<%= link_to 'Back', users_path %>
-
+	<%= link_to t('back'), users_path %>
 </div>
