--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,24 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong><%= t('name') %>:</strong>
   <%= @user.name %>
 </p>
 
 <p>
-  <strong>Email:</strong>
+  <strong><%= t('mail') %>:</strong>
   <%= @user.email %>
 </p>
 
 <p>
-  <strong>Birthday:</strong>
+  <strong><%= t('birthdate') %>:</strong>
   <%= @user.birthday %>
 </p>
 
 <p>
-  <strong>Password:</strong>
+  <strong><%= t('password') %>:</strong>
   <%= @user.password %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to t('edit'), edit_user_path(@user) %> |
+<%= link_to t('back'), users_path %>
